# aiperf

./: .coderabbit.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_PROPOSAL_dataset_inspector.md  ATTRIBUTIONS-Python.md  ATTRIBUTIONS-container.md  ATTRIBUTIONS.md  BEFORE_AFTER_COMPARISON.md  BRANCH_SUMMARY.md  C30_VS_C100_ANALYSIS.md  CENTRALIZED_REGISTRY_GUIDE.md  CHANGELOG.md  CHROME_DISTROLESS_SOLUTION.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMMIT_CONTENTS.md  COMPARISON_RESULTS.md  CONTRIBUTING.md  DCO.md  DELIVERABLES.md  DEP_001_LAZY_LOADED_PLUGIN_REGISTRY_SYSTEM.md  DYNAMIC_ENUM_GUIDE.md  DYNAMIC_ENUM_PLUGIN_INTEGRATION.md  DYNAMIC_ENUM_QUICK_INTEGRATION.md  DYNAMIC_ENUM_SUMMARY.md  Dockerfile  ENTRYPOINTS_GUIDE.md  FACTORY_SYSTEM_CHANGES.md  HYBRID_REGISTRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LAZY_PLUGIN_REGISTRY_DESIGN.md  Makefile  PLUGIN_REGISTRY_DESIGN.md  PLUGIN_SYSTEM_DESIGN.md  PROMPTGENERATOR_RNG_ANALYSIS.md  PUBLIC_DATASET_DECOUPLING.md  QUICK_START.md  README.md  (+28 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: dco.yml
.github/workflows/: docker-integration-tests.yml  lint-pr-title.yaml  pr-install-instructions.yaml  pre-commit.yml  release-init.yml  run-integration-tests.yml  run-unit-tests.yml
aiperf/: __init__.py  cli_utils.py
aiperf/clients/: __init__.py
aiperf/common/: constants.py  exceptions.py  factories.py  logging.py  plugins.py  protocols.py  tokenizer.py  types.py  utils.py
aiperf/controller/: __init__.py  multiprocess_service_manager.py  registration_manager.py  system_controller.py
aiperf/dataset/: dataset_manager.py
aiperf/endpoints/: __init__.py  base_endpoint.py  nim_rankings.py  openai_chat.py  openai_completions.py  (+1 more)
comparison_c30_vs_c100/: 00_comparison_report.txt
docs/: CLI_PLUGINS.md  CLI_PLUGINS_QUICKSTART.md  CLI_PLUGINS_SUMMARY.md  PARALLEL_PROCESSING_REPRODUCIBILITY.md  PLUGIN_BEST_PRACTICES.md  PLUGIN_DEVELOPER_GUIDE.md  PLUGIN_SYSTEM_COMPARISON.md  SIMPLE_FACTORY_GUIDE.md  architecture.md  benchmark_datasets.md  cli_options.md  environment_variables.md  genai-perf-feature-comparison.md  hooks_quick_reference.md  hooks_system_analysis.md  index.md  migrating.md  parallel_rng_approach_comparison.md  random_number_generation.md  reproducibility.md  server_metrics.md  server_metrics_json_schema.md  server_metrics_reference.md  timing-modes.md  tutorial.md
examples/: README_trace_analysis.md  analyze_trace_data.py  test_har_export.py  trace_timing_example.py
examples/aiperf-example-plugin/: DEVELOPER_GUIDE.md  INDEX.md  LICENSE  PLUGIN_STRUCTURE.md  README.md  USAGE_EXAMPLES.md  pyproject.toml
examples/aiperf-example-plugin/aiperf_example_plugin/: __init__.py  hooks.py  processors.py  registry.yaml
examples/aiperf-example-plugin/tests/: __init__.py  test_hooks.py  test_processors.py
notebooks/: README.md  TCO_calculator.ipynb
scripts/: analyze_histogram_percentiles.py  benchmark_parallel_conversion.py  process_server_metrics_jsonl.py  validate_registry.py
test_output/: profile_export_aiperf.csv  profile_export_aiperf.json  recorded_requests.json
tests/: README.md  WINDOWS_TESTING.md  conftest.py  test_cli_runner_macos.py  test_hash_id_random_generator.py  test_mooncake_trace_reproducibility.py  test_sequence_distribution.py  test_tokenizer.py
tools/: add_copyright.py  generate_cli_docs.py  generate_enum_stubs.py  generate_env_vars_docs.py  generate_init_files.py  generate_init_files.sh  generate_literals.py  generate_plugin_artifacts.py  generate_plugin_enums.py  generate_plugin_overloads.py  generate_plugin_schemas.py  types.yaml  validate_plugin_schemas.py
(+1163 files in other folders)
